--- a/react-flask-app/package.json
+++ b/react-flask-app/package.json
@@ -13,10 +13,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "start-api": "cd api && venv/bin/flask run --no-debugger",
+    "start-api": "cd flaskapi && venv/bin/flask run --no-debugger",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "test-api": "cd api && flask test",
+    "test-api": "cd flaskapi && flask test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
