--- a/react-flask-app/package.json
+++ b/react-flask-app/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "start-api": "cd flaskapi && venv/bin/flask run --no-debugger",
+    "start-api": "cd flaskapi && python api.py",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "test-api": "cd flaskapi && flask test",
